--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-  <head><title>Szymon Webseite</title></head>
+  <head><title>Hier ist die website von Szymon </title></head>
   <body>
-<h1>MOOOOOIN</h1>
-<marquee>Test Test 1 2 3</marquee>
+<h1>Ich würd mal ihnen sagen wie hesslig sie eigentlich sind aber deine mom hat es mir schon gesagt </h1>
+<marquee>your mom </marquee>
     
   </body>
 </html>
