--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head><title>Hier ist die website von Szymon </title></head>
   <body>
 <h1>Ich würd mal ihnen sagen wie hesslig sie eigentlich sind aber deine mom hat es mir schon gesagt </h1>
-<marquee>your mom </marquee>
+<h2>ICH</h2> </h2><marquee>your mom </marquee>
     
   </body>
 </html>
